Bug 1406735 - Prevent pinned tab separator from overlapping the tab background. r=johannh
MozReview-Commit-ID: 2w3MGQOdP7K

UltraBlame original commit: b4c54a5506af769e0d94a4ae2eb6e82642284dc3

--- a/browser/themes/shared/tabs.inc.css
+++ b/browser/themes/shared/tabs.inc.css
@@ -3738,6 +3738,38 @@ left
 0
 ;
 }
+#
+tabbrowser
+-
+tabs
+[
+positionpinnedtabs
+]
+>
+.
+tabbrowser
+-
+tab
+[
+pinned
+]
+>
+.
+tab
+-
+stack
+{
+border
+-
+inline
+-
+end
+:
+1px
+solid
+transparent
+;
+}
 .
 tabbrowser
 -
